--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^4.7.16",
     "babel-loader": "^4.2.0",
     "browser-sync": "^2.0.0",
+    "bundle-loader": "^0.5.4",
     "del": "^1.1.1",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "^2.0.0",
